# python-metrics-challenge-jornada-dados

./: README.md  main.py  pyproject.toml
data/: funcionarios.csv
output/: erros.csv  kpis.json  relatorio_individual.csv
src/: kpis.py  reader.py  schema.py  transform.py
