[project]
name = "desafio-1-bootcamp-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Augusto",email = "marcelo.augusto.453@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandera (>=0.26.1,<0.27.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
